--- a/sk.html
+++ b/sk.html
@@ -6181,7 +6181,7 @@ LIST2&rarr;		SKX <sub>&gamma;</sub> ?	** REL RD ADDR	[? is alias for #, see pdf_
 		<sup>1</sup><sup>5</sup>AUX <sub>S</sub><sub>|</sub><sub>&alpha;</sub> LIST
 
 <hr>
-[meta file_name=102726903-05-01-acc.pdf pdf_page=131 doc_page=129 type=code]
+[meta file_name=102726903-05-01-acc.pdf pdf_page=131 doc_page=129 type=code proof=1]
 [Page header: "LMH GX7A 026"]
 
 		JPQ 45MCA3
@@ -6200,7 +6200,7 @@ LIST2&rarr;		SKX <sub>&gamma;</sub> ?	** REL RD ADDR	[? is alias for #, see pdf_
 45MERGE2&rarr;
 		<sup>1</sup><sup>1</sup>RSX <sub>&alpha;</sub> LIST2
 		INX <sub>&alpha;</sub> MASTERS-LIST
-		LGORR&equiv;SPECB&times;<sub>&alpha;</sub>=S&rarr;45MG3
+		LGORR&equiv;SPECB&times;&alpha;=S&rarr;45MG3
 		hJPQ 45PUT
 		<sup>1</sup><sup>1</sup>RSX <sub>&beta;</sub> LIST2
 		<sup>1</sup><sup>1</sup>AUX <sub>&beta;</sub><sub>|</sub><sub>&beta;</sub> LIST
@@ -6224,7 +6224,7 @@ LIST2&rarr;		SKX <sub>&gamma;</sub> ?	** REL RD ADDR	[? is alias for #, see pdf_
 		LGORR&equiv;SPECB&times;&alpha;=S&rarr;45MG5
 		hJPQ 45FREE
 		JPQ 45MG3X*
-45MG5&rarr;		<sup>1</sup>STE 45MG5X*
+45MG5&rarr;		<sup>1</sup>STE 45MG5X
 45MG5A&rarr;		SKX <sub>&beta;</sub> ?
 		LGORR&equiv;SPECB&times;&beta;=S&rarr;45MG6
 		hJPQ 45SWITCHRINGS
@@ -6236,7 +6236,7 @@ LIST2&rarr;		SKX <sub>&gamma;</sub> ?	** REL RD ADDR	[? is alias for #, see pdf_
 45MG6X&rarr;		JPQ ?
 
 <hr>
-[meta file_name=102726903-05-01-acc.pdf pdf_page=132 doc_page=130 type=code]
+[meta file_name=102726903-05-01-acc.pdf pdf_page=132 doc_page=130 type=code proof=1]
 [Page header: "LMH GX7A 027"]
 
 		<sup>1</sup><sup>1</sup>RSX <sub>S</sub><sub>|</sub><sub>&alpha;</sub> LIST+(SPECB)+1
@@ -6285,12 +6285,13 @@ TX2MSG&rarr;		hJPQ TX2RESET
 		RXF <sub>7</sub><sub>6</sub> 45EXIT*
 		SKN 45RSW
 		RXF <sub>7</sub><sub>6</sub> 45MERGE
-		RFD <sub>4</sub><sub>5</sub><sub>L</sub><sub>W</sub>30000
+		RFD <sub>4</sub><sub>5</sub><sub>L</sub><sub>W</sub>#+1
+		<sup>1</sup>IOS <sub>4</sub><sub>5</sub><sub>L</sub><sub>W</sub>30000
 		<sup>6</sup>TSD 45MK1***CR
 TX2K2&rarr;		<sup>6</sup>TSD { 43,47,,55,2}	**TX-2
 
 <hr>
-[meta file_name=102726903-05-01-acc.pdf pdf_page=133 doc_page=131 type=code]
+[meta file_name=102726903-05-01-acc.pdf pdf_page=133 doc_page=131 type=code proof=1]
 [Page header: "LMH GX7A 030"]
 
 		<sup>5</sup>TSD TX2K2*
@@ -6345,7 +6346,7 @@ TX2RD&rarr;		<sup>1</sup>STE 45EXIT
 		DEX <sub>3</sub><sub>4</sub> 10
 
 <hr>
-[meta file_name=102726903-05-01-acc.pdf pdf_page=134 doc_page=132 type=code]
+[meta file_name=102726903-05-01-acc.pdf pdf_page=134 doc_page=132 type=code proof=1]
 [Page header: "LMH GX7A 031"]
 
 		<sup>1</sup>DPX 45WA	**SUM CHK
@@ -6396,12 +6397,12 @@ TX21STRD&rarr;
 		h<sup>6</sup>TSD B	**DATA OR SC1
 		h<sup>1</sup>JNK <sub>3</sub><sub>4</sub> TX2RDCONT
 TX2RD2&rarr;		h<sup>3</sup>TSD B	**SC2 [guessing the superscript, maybe not 3?]
-		<sup>1</sup>IOS <sub>4</sub><sub>5</sub> 30120
+		<sup>1</sup>IOS <sub>4</sub><sub>6</sub> 30120
 		<sup>2</sup>ADD B
 
 <hr>
-[meta file_name=102726903-05-01-acc.pdf pdf_page=135 doc_page=133 type=code]
-[Page header: "LMH GX7A 031"]
+[meta file_name=102726903-05-01-acc.pdf pdf_page=135 doc_page=133 type=code proof=1]
+[Page header: "LMH GX7A 032"]
 
 		h<sup>1</sup>JNA {TURNOFF&Delta;}
 		h<sup>1</sup>JNA {ERRLOOP&beta;}*
@@ -6453,16 +6454,16 @@ ST&rarr;		JPQ 200001
 LAST&rarr;		ZZLAST
 
 <hr>
-[meta file_name=102726903-05-01-acc.pdf pdf_page=136 doc_page=134 type=symex]
+[meta file_name=102726903-05-01-acc.pdf pdf_page=136 doc_page=134 type=symex proof=1]
 [Page header: "IES BOO7 001"]
 [Handwritten: "CONS 15 SEPT"]
 
 <hr>
-[meta file_name=102726903-05-01-acc.pdf pdf_page=137 doc_page=135 type=symex]
+[meta file_name=102726903-05-01-acc.pdf pdf_page=137 doc_page=135 type=symex proof=1]
 [Page header: "IES BOO7 002"]
 
 <hr>
-[meta file_name=102726903-05-01-acc.pdf pdf_page=138 doc_page=136 type=equalities]
+[meta file_name=102726903-05-01-acc.pdf pdf_page=138 doc_page=136 type=equalities proof=1]
 [Page header: "IES BOO7 003"]
 
 BADOV= 200100
@@ -6504,7 +6505,7 @@ PVAL= 20        **COORDINATES OF POINT
 PSIZE= 16       **SIZE OF THIS PICTURE
 PYTHAGORIAN= 200007
 
-SMASBL= 6       **SMALL MASTER BLOCK LENGTH FOR DESIGNATERS
+SMASBL= 6       **SMALL MASTER BLOCK LENGTH
 S= 7
 SVAL= 16        **VALUE OF SCALER
 SPECB= 2        **SPECIFIC BLOCKS
@@ -6513,7 +6514,7 @@ SPECB= 2        **SPECIFIC BLOCKS
 TPVALS= 5&times;MASBL+PICTURES  **TYPICAL VARIABLES
 
 <hr>
-[meta file_name=102726903-05-01-acc.pdf pdf_page=139 doc_page=137 type=equalities]
+[meta file_name=102726903-05-01-acc.pdf pdf_page=139 doc_page=137 type=equalities proof=1]
 [Page header: "IES BOO7 004"]
 
 TYPE= 0         **TIES TO SPECB IN MASTER BLOCK
@@ -6538,14 +6539,14 @@ WHERE= 12       **LOCATION OF THING IN PICTURE
 &lambda;= 6
 
 <hr>
-[meta file_name=102726903-05-01-acc.pdf pdf_page=140 doc_page=138 type=macros]
+[meta file_name=102726903-05-01-acc.pdf pdf_page=140 doc_page=138 type=macros proof=1]
 [Page header: "IES BOO7 005"]
 [No idea why some instructions are flush with left margin, preserving]
 
 &#9755;&#9755;DEF EITHER&equiv;P,Q,R,T,U,V&rarr;CODE
 RSX<sub>S</sub><sub>|</sub><sub>&alpha;</sub>LIST+CODE
 		JPX<sub>S</sub>EITH3
-EITH1&rarr;		LDA {-(?)} [seen this construction before, maybe &beta;?]
+EITH1&rarr;		LDA {-(h)}
 		STA EITH
 		<sup>1</sup>DPX<sub>&alpha;</sub>EITH-5
 		REX<sub>S</sub>EITH3-EITH2-2
@@ -6594,7 +6595,7 @@ LDB P+1
 STA P
 
 <hr>
-[meta file_name=102726903-05-01-acc.pdf pdf_page=141 doc_page=139 type=macros]
+[meta file_name=102726903-05-01-acc.pdf pdf_page=141 doc_page=139 type=macros proof=1]
 [Page header: "IES BOO7 006"]
 
 STB P+1
@@ -6615,7 +6616,7 @@ hJOV E
 STA D
 &#9755;&#9755;EMD
 
-&#9755;&#9755;DEF SET|X&equiv;S,&beta;,&gamma;,&Delta;,&epsilon;,&lambda;
+&#9755;&#9755;DEF SETIX&equiv;S,&beta;,&gamma;,&Delta;,&epsilon;,&lambda;
 		RSX<sub>S</sub><sub>|</sub><sub>&alpha;</sub>LIST+CVTS+2
 		RSX<sub>&beta;</sub><sub>|</sub><sub>&alpha;</sub>LIST+CVTS+4
 		RSX<sub>&gamma;</sub><sub>|</sub><sub>&alpha;</sub>LIST+CVTS+6
@@ -6648,7 +6649,7 @@ hJMP CCFR-COMP
 &#9755;&#9755;EMD
 
 <hr>
-[meta file_name=102726903-05-01-acc.pdf pdf_page=142 doc_page=140 type=macros]
+[meta file_name=102726903-05-01-acc.pdf pdf_page=142 doc_page=140 type=macros proof=1]
 [Page header: "IES BOO7 007"]
 
 &#9755;&#9755;DEF WHEREIS&equiv;&beta;&rarr;P
@@ -6679,13 +6680,13 @@ hJMP CCFR-COMP
 		STA V+P
 		LDB<sub>S</sub><sub>|</sub><sub>&alpha;</sub>LIST+Q
 		STB V+Q
-		LDC<sub>&alpha;</sub><sub>|</sub><sub>&alpha;</sub>LIST+R
+		LDC<sub>S</sub><sub>|</sub><sub>&alpha;</sub>LIST+R
 		STC V+R
 		LDD<sub>S</sub><sub>|</sub><sub>&alpha;</sub>LIST+U
 		STD V+U
 &#9755;&#9755;EMD
 
-&#9755;&#9755;DEF CDIFF&equiv;&beta;&rarr;&gamma;=R&rarr;BADOV
+&#9755;&#9755;DEF VDIFF&equiv;&beta;&rarr;&gamma;=R&rarr;BADOV
 		WHEREIS&equiv;&gamma;&rarr;R
 		WHEREIS&equiv;&beta;
 		SUB R
