--- a/sk.html
+++ b/sk.html
@@ -3807,7 +3807,7 @@ IBVERTS= 14&times;MASBL+PICTURES
 IPCOTP= 16      **INSTANCE-POINT CONSTRAINTS WITH THIS VIRGIN
 
 <hr>
-[meta file_name=102726903-05-01-acc.pdf pdf_page=86 doc_page=84 type=equalities]
+[meta file_name=102726903-05-01-acc.pdf pdf_page=86 doc_page=84 type=equalities proof=1]
 [Page header: "LMH GX7A 007" proof=1]
 
 IWHAT= 14       **WHAT PIC THIS IS INSTANCE OF
@@ -3854,7 +3854,7 @@ NCON= 17        **# CONSTRAINTS SHOWN
 NLIST= 23000	**MODEL EMPTY LIST STRUCTURE
 
 <hr>
-[meta file_name=102726903-05-01-acc.pdf pdf_page=87 doc_page=85 type=equalities]
+[meta file_name=102726903-05-01-acc.pdf pdf_page=87 doc_page=85 type=equalities proof=1]
 [Page header: "LMH GX7A 010" proof=1]
 
 NUMBERS= 10&times;MASBL+PICTURES
@@ -3884,7 +3884,7 @@ PINS= 14        **INSTANCES OF THIS PICTURE
 PSIZE= 16       **SIZE OF THIS PICTURE
 PNAME= 17       **NAME OF PICTURE, 36 BITS
 PSAVE= 20       **6 REGISTERS TO SAVE IN PICTURE
-PLS= 14 **LINES ND CIRCLES ON THIS POINT
+PLS= 14 **LINES ND CIRCLES ON THIS POINT [sic]
 PVAL= 20        **COORDINATES OF POINT
 PBOCC= 10       **CENTER OF POINT ON CIRCLE
 PBOCS= 12       **START OF POINT ON CIRCLE
@@ -3904,7 +3904,7 @@ S= 7
 SCCEN= 200035
 
 <hr>
-[meta file_name=102726903-05-01-acc.pdf pdf_page=88 doc_page=86 type=equalities]
+[meta file_name=102726903-05-01-acc.pdf pdf_page=88 doc_page=86 type=equalities proof=1]
 [Page header: "LMH GX7A 011" proof=1]
 
 SCSZ= 200034
@@ -3956,7 +3956,7 @@ TX2TOG= 377727
 [*TAFWA1=]
 
 <hr>
-[meta file_name=102726903-05-01-acc.pdf pdf_page=89 doc_page=87 type=equalities]
+[meta file_name=102726903-05-01-acc.pdf pdf_page=89 doc_page=87 type=equalities proof=1]
 [Page header: "LMH GX7A 012" proof=1]
 
 [*TAFNOTREADY=]
@@ -6704,7 +6704,7 @@ hJMP CCFR-COMP
 		hJMP CCFR+1	**DISPLAY
 
 <hr>
-[meta file_name=102726903-05-01-acc.pdf pdf_page=143 doc_page=141 type=macros]
+[meta file_name=102726903-05-01-acc.pdf pdf_page=143 doc_page=141 type=macros proof=1]
 [Page header: "IES BOO7 010"]
 
 		DEGEN	**HOWBIG
@@ -6743,7 +6743,7 @@ hJPQ PYTHAGORIAN
 &#9755;&#9755;EMD
 
 <hr>
-[meta file_name=102726903-05-01-acc.pdf pdf_page=144 doc_page=142 type=main]
+[meta file_name=102726903-05-01-acc.pdf pdf_page=144 doc_page=142 type=main proof=1]
 [Page header: "IES BOO7 011"]
 
  NLIST|
@@ -6764,7 +6764,7 @@ C2&rarr;		NCONGENSP&equiv;(CONSTRAINTS+SPECB+1-LIST,,#-NLIST+MASBL),(35,30,,33,3
 		[Macro expansion omitted]
 
 <hr>
-[meta file_name=102726903-05-01-acc.pdf pdf_page=145 doc_page=143 type=main]
+[meta file_name=102726903-05-01-acc.pdf pdf_page=145 doc_page=143 type=main proof=1]
 [Page header: "IES BOO7 012"]
 
 		[Macro expansion (carried over from previous page) omitted]
@@ -6776,7 +6776,7 @@ C4&rarr;		NCONGEN&equiv;(41,45,,21,30),(14,12,,0),24,4,1,1
 		[Macro expanson omitted]
 
 <hr>
-[meta file_name=102726903-05-01-acc.pdf pdf_page=146 doc_page=144 type=main]
+[meta file_name=102726903-05-01-acc.pdf pdf_page=146 doc_page=144 type=main proof=1]
 [Page header: "IES BOO7 013"]
 
 		[Macro expansion (carried over from the previous page) omitted]
@@ -6791,19 +6791,19 @@ C7&rarr;		NCONGEN&equiv;(42,30,,23,34),(22,20,,0),34,10,1,4
 		[Macro expansion omitted]
 
 <hr>
-[meta file_name=102726903-05-01-acc.pdf pdf_page=147 doc_page=145 type=main]
+[meta file_name=102726903-05-01-acc.pdf pdf_page=147 doc_page=145 type=main proof=1]
 [Page header: "IES BOO7 014"]
 
 		[Macro expansion (carried over from the previous page) omitted]
 		** MULTIPLE SIZE
-C8&rarr;		NCONGEN&equiv;(24,51,,30,42),(16,16,,0),42,11,1,2
+C8&rarr;		NCONGEN&equiv;(24,51,,30,42),(16,14,,0),42,11,1,2
 		[Macro expansion omitted]
 		**SCALER = DISTANCE
 C9&rarr;		NCONGEN&equiv;(30,23,,24,42),(16,16,,0),23,12,1,3
 		[Macro expansion omitted]
 
 <hr>
-[meta file_name=102726903-05-01-acc.pdf pdf_page=148 doc_page=146 type=main]
+[meta file_name=102726903-05-01-acc.pdf pdf_page=148 doc_page=146 type=main proof=1]
 [Page header: "IES BOO7 015"]
 
 		[Macro expansion (carried over from the previous page) omitted]
@@ -6815,7 +6815,7 @@ C11&rarr;		NCONGEN&equiv;(33,33,,44,25),(12,12,,0),25,14,1,1
 		[Macro expansion omitted]
 
 <hr>
-[meta file_name=102726903-05-01-acc.pdf pdf_page=149 doc_page=147 type=main]
+[meta file_name=102726903-05-01-acc.pdf pdf_page=149 doc_page=147 type=main proof=1]
 [Page header: "IES BOO7 016"]
 
 		[Macro expansion (carried over from the previous page) omitted]
@@ -6827,19 +6827,19 @@ C13&rarr;		NCONGEN&equiv;(22,42,,25,6),(14,12,,0),6,21,1,1
 		[Macro expansion omitted]
 
 <hr>
-[meta file_name=102726903-05-01-acc.pdf pdf_page=150 doc_page=148 type=main]
+[meta file_name=102726903-05-01-acc.pdf pdf_page=150 doc_page=148 type=main proof=1]
 [Page header: "IES BOO7 017"]
 
 		[Macro expansion (carried over from the previous page) omitted]
 		**POINTS NEXT NUMBER
-C14&rarr;		NCONGEN&equiv;(35,39,,20,37),(16,14,,0),36,23,2,2
+C14&rarr;		NCONGEN&equiv;(35,35,,20,37),(16,14,,0),36,23,2,2
 		[Macro expansion omitted]
 		**HOLD LENGTH
 C15&rarr;		NCONGEN&equiv;(23,23,,36,27),(16,14,,0),46,24,1,2
 		[Macro expansion omitted]
 
 <hr>
-[meta file_name=102726903-05-01-acc.pdf pdf_page=151 doc_page=149 type=main]
+[meta file_name=102726903-05-01-acc.pdf pdf_page=151 doc_page=149 type=main proof=1]
 [Page header: "IES BOO7 020"]
 
 		[Macro expansion (carried over from the previous page) omitted]
@@ -6851,7 +6851,7 @@ CN10&rarr;		NCONGENSP&equiv;(#-NLIST-MASBL,,C1-NLIST+1),(37,41,,36,37),(22,20,,0
 		[Macro expansion omitted]
 
 <hr>
-[meta file_name=102726903-05-01-acc.pdf pdf_page=152 doc_page=150 type=main]
+[meta file_name=102726903-05-01-acc.pdf pdf_page=152 doc_page=150 type=main proof=1]
 [Page header: "IES BOO7 021"]
 
 		[Macro expansion (carried over from the previous page) omitted]
