--- a/sk2.html
+++ b/sk2.html
@@ -1,11 +1,11 @@
 <html><body style='font-size:150%'><pre><code>
 <hr>
-[meta file_name=102726903-05-02-acc.pdf pdf_page=1 doc_page=151 type=code]
+[meta file_name=102726903-05-02-acc.pdf pdf_page=1 doc_page=151 type=code proof=1]
 [Page header: "IES BOO7 001"]
 [Omitting duplicate code present on doc_pages 144-150]
 
 <hr>
-[meta file_name=102726903-05-02-acc.pdf pdf_page=2 doc_page=152 type=code]
+[meta file_name=102726903-05-02-acc.pdf pdf_page=2 doc_page=152 type=code proof=1 proof=1]
 [Page header: "IES BOO7 002"]
 [Omitting duplicated code present on doc_pages 144-150]
 [Omitted code ends with " ORIGIN|"]
@@ -18,7 +18,7 @@ HEADING1&rarr;
 		JPQ HEADING2A
 HEADING2&rarr;
 		<sup>1</sup>STE HEADING1X
-		DPX <sub>&alpha;</sub>SAVE&alpha;
+		DPX <sub>&alpha;</sub> SAVE&alpha;
 HEADING2A&rarr;
 		VDIFF&equiv;&gamma;&rarr;&beta;=DELTA1&rarr;BADOV
 		RSX <sub>&alpha;</sub> SAVE&alpha;
@@ -29,6 +29,7 @@ PARAERR&rarr;
 		PROD&equiv;DELTA1&times;DELTA2+1/DIST=TS&rarr;BADOV
 		[Note that DELTA1+1&times;DELTA2 is evaluated as (DELTA1+1)&times;DELTA2, see chapter 6-2.7 in the HandbookNov63]
 		PROD&equiv;DELTA1+1&times;DELTA2/DIST&rarr;BADOV
+		DIFF&rarr;TS&rarr;BADOV
 PARAERRX&rarr;
 		JPQ #
 PPDERR&rarr;		<sup>1</sup>STE PPDERRX
@@ -46,7 +47,7 @@ PRLCOMP&rarr;
 		SUMM&rarr;DIST=DIST&rarr;BADOV
 
 <hr>
-[meta file_name=102726903-05-02-acc.pdf pdf_page=3 doc_page=153 type=code]
+[meta file_name=102726903-05-02-acc.pdf pdf_page=3 doc_page=153 type=code proof=1]
 [Page header: "IES BOO7 003"]
 
 		EITHER&equiv;PPDERR,PARAERR&rarr;20
@@ -62,13 +63,13 @@ MDISCOMP&rarr;
 MDISCOMPX&rarr;
 		JPQ #
 MD1&rarr;		<sup>1</sup>STE MDX
-		LDA {-(?)}
+		LDA {-(h)}
 		JPQ MDT
 MD2&rarr;		<sup>1</sup>STE MDX
 		LDA { 200,}
 		JPQ MDT
 MD3&rarr;		<sup>1</sup>STE MDX
-		LDA {1-(?))/3}
+		LDA {(-(h))/3}
 MDT&rarr;		MUL TS
 		SUB TT
 		SCA {-1,}
@@ -77,7 +78,7 @@ MD4&rarr;		<sup>1</sup>STE MDX1
 		LDA { 200,}
 		JPQ MDT1
 MD5&rarr;		<sup>1</sup>STE MDX1
-		LDA {1-(?))/3}
+		LDA {(-(h))/3}
 MDT1&rarr;		MUL TT
 		SUB TS
 		SCA {-1,}
@@ -89,8 +90,7 @@ MSCOMP&rarr;		<sup>1</sup>STE MSCOMPX
 		RSX <sub>S</sub><sub>|</sub><sub>&gamma;</sub> LIST+TYPE
 		AUX <sub>&gamma;</sub><sub>|</sub><sub>S</sub> LIST+VARLOC
 		PYTH&equiv;LIST<sub>&beta;</sub>=TS&rarr;BADOV
-		[Part of the next line obscured/damaged.]
-		PYTH&equiv;LIST??=TT&rarr;BADOV
+		PYTH&equiv;LIST??=TT&rarr;BADOV [part of the line obscured/damaged]
 		EITHER&equiv;MD1,MD2,MD3,MD4,MD5&rarr;14
 MSCOMPX&rarr;
 		JPQ #
@@ -102,7 +102,7 @@ TPTLCOMP&rarr;
 		GETVAL&equiv;0,1&times;&Delta;&rarr;DELTA2
 
 <hr>
-[meta file_name=102726903-05-02-acc.pdf pdf_page=4 doc_page=154 type=code]
+[meta file_name=102726903-05-02-acc.pdf pdf_page=4 doc_page=154 type=code proof=1]
 [Page header: "IES BOO7 004"]
 
 		COM DELTA2+1
@@ -126,7 +126,7 @@ ONLINECOMP&rarr;
 		SUMM&rarr;DIST=DIST&rarr;BADOV
 		hJPQ PARAERR
 ONLNX&rarr;		JPQ #
-INCIRCCOMP&rarr;
+ONCIRCCOMP&rarr;
 		<sup>1</sup>STE ONCIX
 		SETIX&equiv;&beta;,&gamma;,&Delta;
 		DISTANCE&equiv;&beta;&rarr;&gamma;=TS&rarr;BADOV
@@ -143,20 +143,20 @@ HOVSX&rarr;		JPQ #
 HOVSCOMP1&rarr;
 		SUBR&equiv;LDA DELTA1 [instruction as a macro parameter]
 HOVSCOMP2&rarr;
-		SUBR&equiv;LDA DELTA1+1 [guessing, part of the line is damaged]
+		SUBR&equiv;LDA DELTA1+1 [best guess, part of the line is damaged]
 IBVERTCOMP&rarr;
 		<sup>1</sup>STE IBCOMPX
 		SETIX&equiv;&beta;
 		GETVAL&equiv;0,1&times;&beta;&rarr;DELTA1
 		EITHER&equiv;HOVSCOMP1,HOVSCOMP2&rarr;12
 IBCOMPX&rarr;
-		JPQ # [guessing, some damage/smudging]
+		JPQ # [best guess, some damage/smudging]
 DISTCOMP&rarr;
 		<sup>1</sup>STE DISTCOMPX
 		SETIX&equiv;&Delta;,&beta;,&gamma;
 
 <hr>
-[meta file_name=102726903-05-02-acc.pdf pdf_page=5 doc_page=155 type=code]
+[meta file_name=102726903-05-02-acc.pdf pdf_page=5 doc_page=155 type=code proof=1]
 [Page header: "IES BOO7 005"]
 
 		PYTH&equiv;DELTA1&rarr;&rarr;BADOV
@@ -197,8 +197,8 @@ MIDP2&rarr;		<sup>1</sup>STE MIDP2X
 		SUB DELTA1+1
 		hJOV BADOV
 MIDP2X&rarr;		JPQ #
-3SET&rarr;		<sup>1</sup>STE 3SETX	[guessing, line damaged in the listing]
-		SETIX&equiv;&beta;,&gamma;,&Delta;	[guessing, line damaged in the listing]
+3SET&rarr;		<sup>1</sup>STE 3SETX	[best guess, line damaged in the listing]
+		SETIX&equiv;&beta;,&gamma;,&Delta;	[best guess, line damaged in the listing]
 		DPX <sub>&alpha;</sub> SAVE&alpha;
 		WHEREIS&equiv;&beta;&rarr;DELTA1
 		WHEREIS&equiv;&gamma;&rarr;DELTA2
