--- a/sk2.html
+++ b/sk2.html
@@ -211,7 +211,7 @@ MIDP2X&rarr;		JPQ #
 		hJPQ PYTHAGORIAN
 
 <hr>
-[meta file_name=102726903-05-02-acc.pdf pdf_page=6 doc_page=156 type=code]
+[meta file_name=102726903-05-02-acc.pdf pdf_page=6 doc_page=156 type=code proof=1]
 [Page header: "IES BOO7 006"]
 
 		hJOV BADOV
@@ -252,9 +252,9 @@ PNNU2&rarr;		<sup>1</sup>STE PNNU1X
 		LDA DELTA1+1
 		STA DELTA1
 		LDA DELTA2+1
-		STA DELTA2	[guessing, line damaged]
+		STA DELTA2	[best guess, line damaged]
 		JPQ PNNUT
-PNNUT1&rarr;		<sup>1</sup>STE PNNUT1X	[guessing the label, line damaged]
+PNNUT1&rarr;		<sup>1</sup>STE PNNUT1X	[best guess for the label, line damaged]
 		DIFF&equiv;DELTA1&rarr;DELTA2&rarr;BADOV
 PNNUT1X&rarr;
 		JPQ #
@@ -266,7 +266,7 @@ PNNUGET&rarr;
 		<sup>1</sup>STE PNNUGETX
 
 <hr>
-[meta file_name=102726903-05-02-acc.pdf pdf_page=7 doc_page=157 type=code]
+[meta file_name=102726903-05-02-acc.pdf pdf_page=7 doc_page=157 type=code proof=1]
 [Page header: "IES BOO7 007"]
 
 		GETVAL&equiv;0,1&times;&beta;&rarr;DELTA2
@@ -296,7 +296,7 @@ FORCE&rarr;		<sup>1</sup>STE FORCEX
 		SUB TS
 		hJOV BADOV
 		STA TS
-		PROD&times;{-(?)}/{ 343597302.}&rarr;BADOV
+		PROD&times;{-(h)}/{ 343597302.}&rarr;BADOV
 		DIFF&rarr;LIST+SVAL<sub>&Delta;</sub>&rarr;BADOV
 FORCEX&rarr;		JPQ #
 DELTA1&rarr;		0
@@ -308,24 +308,24 @@ DELTA3&rarr;		0
 RI&rarr;		hJPQ 377750
 CL&rarr;		hJPQ 200000
 ST&rarr;		hJPQ 200001
-LAST&rarr;		ZZLAST	[guessing the label, line damaged]
+LAST&rarr;		ZZLAST	[best guess for the label, line damaged]
 
 <hr>
-[meta file_name=102726903-05-02-acc.pdf pdf_page=8 doc_page=158 type=symex]
+[meta file_name=102726903-05-02-acc.pdf pdf_page=8 doc_page=158 type=symex proof=1]
 [Handwritten: "P21"]
 [Page header: "IES ONLW 001"]
 [Handwritten: "CALC 15 SEPT"]
 
 <hr>
-[meta file_name=102726903-05-02-acc.pdf pdf_page=9 doc_page=159 type=symex]
+[meta file_name=102726903-05-02-acc.pdf pdf_page=9 doc_page=159 type=symex proof=1]
 [Page header: "IES ONLW 002"]
 
 <hr>
-[meta file_name=102726903-05-02-acc.pdf pdf_page=10 doc_page=160 type=symex]
+[meta file_name=102726903-05-02-acc.pdf pdf_page=10 doc_page=160 type=symex proof=1]
 [Page header: "IES ONLW 003"]
 
 <hr>
-[meta file_name=102726903-05-02-acc.pdf pdf_page=11 doc_page=161 type=equalities]
+[meta file_name=102726903-05-02-acc.pdf pdf_page=11 doc_page=161 type=equalities proof=1]
 [Page header: "IES ONLW 004"]
 
 ARCTAN=hJPQ CACT
@@ -376,7 +376,7 @@ FIX=SKM <sub>4</sub><sub>.</sub><sub>1</sub><sub>0</sub> 377720
 FIXSAP= 200064
 
 <hr>
-[meta file_name=102726903-05-02-acc.pdf pdf_page=12 doc_page=162 type=equalities]
+[meta file_name=102726903-05-02-acc.pdf pdf_page=12 doc_page=162 type=equalities proof=1]
 [Page header: "IES ONLW 005"]
 
 FREEDOMS= 6&times;SMASBL+LIST+1
@@ -389,7 +389,7 @@ GETIT= 7        **MASTER FORMATION SUBROUTINE
 HOWBIG= 6       **MASTER SCSZ COMPUTATION
 HOVS= 15&times;MASBL+PICTURES
 HOVP1= 10       **FIRST HORIZ OR VERT POINT
-HOVP2= 12       **SECOND HO1IZ OR VERT POINT    [sic, HORIZ]
+HOVP2= 12       **SECOND HO1IZ OR VERT POINT    [sic]
 HOVCODE= 14     **HORIZ=1, VERTICAL=2, EITHER=0
 HOLDERS= 2&times;SMASBL+LIST+1
 
@@ -420,7 +420,7 @@ LMEND= 200024
 LMNAME= 200030
 
 <hr>
-[meta file_name=102726903-05-02-acc.pdf pdf_page=13 doc_page=163 type=equalities]
+[meta file_name=102726903-05-02-acc.pdf pdf_page=13 doc_page=163 type=equalities proof=1]
 [Page header: "IES ONLW 006"]
 
 LMAG= 200020
