--- a/sk2.html
+++ b/sk2.html
@@ -473,7 +473,7 @@ PLEND= 200133
 PUNCHIT=SKM <sub>4</sub><sub>.</sub><sub>7</sub> 377621
 
 <hr>
-[meta file_name=102726903-05-02-acc.pdf pdf_page=14 doc_page=164 type=equalities]
+[meta file_name=102726903-05-02-acc.pdf pdf_page=14 doc_page=164 type=equalities proof=1]
 [Page header: "IES ONLW 007"]
 
 PLPUBUSY=SKM <sub>4</sub><sub>.</sub><sub>1</sub><sub>0</sub> 200132
@@ -506,7 +506,7 @@ S= 7
 SPECB= 2        **SPECIFIC BLOCKS
 SCALERS= 3&times;MASBL+PICTURES
 SPLAT=#-NLIST,,#-NLIST
-SVAL= 16        **VALUE OF THE SCALER
+SVAL= 16        **VALUE OF SCALER
 SSHOW= 14       **NUMBERS SHOWING THIS SCALER
 [377725 is defined as SHOWTOG below]
 SHOWBLKS=SKM <sub>4</sub><sub>.</sub><sub>9</sub> 377725     **SHOW NON DRAW JUNK
@@ -518,7 +518,7 @@ SUPPINS=SKM <sub>4</sub><sub>.</sub><sub>5</sub> 377725      **DON'T EXPAND INST
 SIZE= 11        **SIZE OF BLOCK
 
 <hr>
-[meta file_name=102726903-05-02-acc.pdf pdf_page=15 doc_page=165 type=equalities]
+[meta file_name=102726903-05-02-acc.pdf pdf_page=15 doc_page=165 type=equalities proof=1]
 [Page header: "IES ONLW 010"]
 
 SPLATT=#-NLIST-SMASBL,,#+SMASBL-NLIST
@@ -565,10 +565,10 @@ WHERE= 12       **LOCATION OF THING IN PICTURE
 
 &beta;= 2
 
-[Problem: page with header "IES ONLW 011" is missing]
+[Possible problem: page with header "IES ONLW 011" is missing]
 
 <hr>
-[meta file_name=102726903-05-02-acc.pdf pdf_page=16 doc_page=166 type=macros]
+[meta file_name=102726903-05-02-acc.pdf pdf_page=16 doc_page=166 type=macros proof=1]
 [Page header: "IES ONLW 012"]
 [This macros block (doc_pages 166-171) appears to be exactly identical to one on doc_pages 67-72]
 
@@ -624,7 +624,7 @@ LDA P
 SUB Q
 
 <hr>
-[meta file_name=102726903-05-02-acc.pdf pdf_page=17 doc_page=167 type=macros]
+[meta file_name=102726903-05-02-acc.pdf pdf_page=17 doc_page=167 type=macros proof=1]
 [Page header: "IES ONLW 013"]
 
 hJOV U+(Q)-(Q)
@@ -679,10 +679,10 @@ STB A+B
 STC A+C
 
 <hr>
-[meta file_name=102726903-05-02-acc.pdf pdf_page=18 doc_page=168 type=macros]
+[meta file_name=102726903-05-02-acc.pdf pdf_page=18 doc_page=168 type=macros proof=1]
 [Page header: "IES ONLW 014"]
 
-STA A+D
+STD A+D
 &#9755;&#9755;EMD
 
 &#9755;&#9755;DEF HEAD&times;&alpha;&rarr;&beta;
@@ -735,7 +735,7 @@ hJPQ {ERROR1&equiv;&alpha;&rarr;P}
 SKZ ERRORSTOP
 
 <hr>
-[meta file_name=102726903-05-02-acc.pdf pdf_page=19 doc_page=169 type=macros]
+[meta file_name=102726903-05-02-acc.pdf pdf_page=19 doc_page=169 type=macros proof=1]
 [Page header: "IES ONLW 015"]
 
 <sup>1</sup>#<sub>&alpha;</sub>
@@ -790,7 +790,7 @@ hJPQ GORREXIT+(GORREXIT/GORREXIT&#9419;1&times;(LGORREND+1))
 hJPQ SUBR
 
 <hr>
-[meta file_name=102726903-05-02-acc.pdf pdf_page=20 doc_page=170 type=macros]
+[meta file_name=102726903-05-02-acc.pdf pdf_page=20 doc_page=170 type=macros proof=1]
 [Page header: "IES ONLW 016"]
 
 LGORR2&rarr;     SKX<sub>X</sub><sub>R</sub><sub>2</sub>#       **MODIFIED
