--- a/sk2.html
+++ b/sk2.html
@@ -844,7 +844,7 @@ SUBR1&rarr;		JPQ #
 &#9755;&#9755;EMD
 
 <hr>
-[meta file_name=102726903-05-02-acc.pdf pdf_page=21 doc_page=171 type=macros]
+[meta file_name=102726903-05-02-acc.pdf pdf_page=21 doc_page=171 type=macros proof=1]
 [Page header: "IES ONLW 017"]
 
 &#9755;&#9755;DEF HEADER&equiv;T&rarr;N&rarr;P
@@ -890,7 +890,7 @@ SUBR1&rarr;		JPQ #
 &#9755;&#9755;EMD
 
 <hr>
-[meta file_name=102726903-05-02-acc.pdf pdf_page=22 doc_page=172 type=main]
+[meta file_name=102726903-05-02-acc.pdf pdf_page=22 doc_page=172 type=main proof=1]
 [Page header: "IES ONLW 020"]
 [This main block is identical to one on doc_pages 73-79, copy-pasted from there]
 
@@ -911,10 +911,10 @@ BADOV&rarr;		h<sup>1</sup>STE #+2
  CCFR+1|
 		hJMP MAGCON [placed at 200777?]
  NLIST|
-		HOVS-LIST+MASBL [placed at 022000]
+		HOVS-LIST+MASBL [placed at 022000, handwritten "24" over MASBL]
 MM0&rarr;		SMASBL,4,,0 **MASTERS
 		SPLAT
-		-2,0 [resulting octal is |775000 000000|, so -2 goes into top quarter]
+		-2, [resulting octal is |775000 000000|, so -2 goes into top quarter]
 		MM4-NLIST+1,,MM1-NLIST+1
 		45,30,,35,44	**UNIV
 		0
@@ -944,7 +944,7 @@ MM4&rarr;		UNIVBH	**CONSTRAINTS
 		0
 
 <hr>
-[meta file_name=102726903-05-02-acc.pdf pdf_page=23 doc_page=173 type=main]
+[meta file_name=102726903-05-02-acc.pdf pdf_page=23 doc_page=173 type=main proof=1]
 [Page header: "IES ONLW 021"]
 
 H1&rarr;		SMASBL,4,,MM2-NLIST	**FREES
@@ -954,87 +954,88 @@ H1&rarr;		SMASBL,4,,MM2-NLIST	**FREES
 		24,24,,41,25
 		0
 H2&rarr;		HEADER&equiv;HOLDERS&rarr;(34,23,,41,25)	**FREEDOM
-		SMASBL,4,,HOLDERS-LIST
-		#-NLIST-SMASBL,,#+SMASBL-NLIST
-		-2,0
-		SPLAT
-		(34,23,,41,25)
-		T1
+		[Omitting statements which are the result of macro expansions]
+		[SMASBL,4,,HOLDERS-LIST]
+		[#-NLIST-SMASBL,,#+SMASBL-NLIST]
+		[-2,0]
+		[SPLAT]
+		[(34,23,,41,25)]
+		[T1]
 H3&rarr;		HEADER&rarr;HOLDERS&rarr;(42,32,,41,46)	**WORKS
-		SMASBL,4,,HOLDERS-LIST
-		#-NLIST-SMASBL,,#+SMASBL-NLIST
-		-2,0
-		SPLAT
-		(42,32,,41,46)
-		T1
+		[SMASBL,4,,HOLDERS-LIST]
+		[#-NLIST-SMASBL,,#+SMASBL-NLIST]
+		[-2,0]
+		[SPLAT]
+		[(42,32,,41,46)]
+		[T1]
 H4&rarr;		HEADER&equiv;HOLDERS&rarr;(41,26,,41,34)	**MRGR
-		SMASBL,4,,HOLDERS-LIST
-		#-NLIST-SMASBL,,#+SMASBL-NLIST
-		-2,0
-		SPLAT
-		(41,26,,41,34)
-		T1
+		[SMASBL,4,,HOLDERS-LIST]
+		[#-NLIST-SMASBL,,#+SMASBL-NLIST]
+		[-2,0]
+		[SPLAT]
+		[(41,26,,41,34)]
+		[T1]
 H5&rarr;		HEADER&equiv;HOLDERS&rarr;(42,23,,24,23)	**DEADS
-		SMASBL,4,,HOLDERS-LIST
-		#-NLIST-SMASBL,,#+SMASBL-NLIST
-		-2,0
-		SPLAT
-		(42,23,,24,23)
-		T1
+		[SMASBL,4,,HOLDERS-LIST]
+		[#-NLIST-SMASBL,,#+SMASBL-NLIST]
+		[-2,0]
+		[SPLAT]
+		[(42,23,,24,23)]
+		[T1]
 H6&rarr;		HEADER&equiv;HOLDERS&rarr;(42,47,,30,25)	**FIXED
-		SMASBL,4,,HOLDERS-LIST
-		#-NLIST-SMASBL,,#+SMASBL-NLIST
-		-2,0
-		SPLAT
-		(42,47,,30,25)
-		T1
+		[SMASBL,4,,HOLDERS-LIST]
+		[#-NLIST-SMASBL,,#+SMASBL-NLIST]
+		[-2,0]
+		[SPLAT]
+		[(42,47,,30,25)]
+		[T1]
 H7&rarr;		HEADER&equiv;HOLDERS&rarr;(42,26,,24,23)
-		SMASBL,4,,HOLDERS-LIST
-		#-NLIST-SMASBL,,#+SMASBL-NLIST
+		[SMASBL,4,,HOLDERS-LIST]
+		[#-NLIST-SMASBL,,#+SMASBL-NLIST]
 
 <hr>
-[meta file_name=102726903-05-02-acc.pdf pdf_page=24 doc_page=174 type=main]
+[meta file_name=102726903-05-02-acc.pdf pdf_page=24 doc_page=174 type=main proof=1]
 [Page header: "IES ONLW 022"]
 
-		-2,0
-		SPLAT
-		(42,26,,24,23)
-		T1
+		[-2,0]
+		[SPLAT]
+		[(42,26,,24,23)]
+		[T1]
 H8&rarr;		HEADER&equiv;HOLDERS&rarr;(42,35,,45,34)	**MOVINGS
-		SMASBL,4,,HOLDERS-LIST
-		#-NLIST-SMASBL,,#+SMASBL-NLIST
-		-2.0
-		SPLAT
-		(42,35,,45,34)
-		T1
+		[SMASBL,4,,HOLDERS-LIST]
+		[#-NLIST-SMASBL,,#+SMASBL-NLIST]
+		[-2.0]
+		[SPLAT]
+		[(42,35,,45,34)]
+		[T1]
 H9&rarr;		HEADER&equiv;HOLDERS&rarr;(22,37,,44,22)	**CURPICS
-		SMASBL,4,,HOLDERS-LIST
-		#-NLIST-SMASBL,,#+SMASBL-NLIST
-		-2,0
-		SPLAT
-		(22,37,,44,22)
-		T1
+		[SMASBL,4,,HOLDERS-LIST]
+		[#-NLIST-SMASBL,,#+SMASBL-NLIST]
+		[-2,0]
+		[SPLAT]
+		[(22,37,,44,22)]
+		[T1]
 H9.1&rarr;		HEADER&equiv;HOLDERS&rarr;(35,22,,47,35)
-		SMASBL,4,,HOLDERS-LIST
-		#-NLIST-SMASBL..#+SMASBL-NLIST
-		-2,0
-		SPLAT
-		(35,22,,47,35)
-		T1
+		[SMASBL,4,,HOLDERS-LIST]
+		[#-NLIST-SMASBL..#+SMASBL-NLIST]
+		[-2,0]
+		[SPLAT]
+		[(35,22,,47,35)]
+		[T1]
 H9.2&rarr;		HEADER&equiv;HOLDERS&rarr;(1,41,,37,42)
-		SMASBL,4,,HOLDERS-LIST
-		#-NLIST-SMASBL,,#+SMASBL-NLIST
-		-2,0
-		SPLAT
-		(1,41,,37,42)
-		T1
+		[SMASBL,4,,HOLDERS-LIST]
+		[#-NLIST-SMASBL,,#+SMASBL-NLIST]
+		[-2,0]
+		[SPLAT]
+		[(1,41,,37,42)]
+		[T1]
 H9.3&rarr;		HEADERS&equiv;HOLDERS&rarr;(2,41,,37,42)
-		SMASBL,4,,HOLDERS-LIST
-		#-NLIST-SMASBL,,#+SMASBL-NLIST
-		-2,0
-		SPLAT
-		(2,41,,37,42)
-		T1
+		[SMASBL,4,,HOLDERS-LIST]
+		[#-NLIST-SMASBL,,#+SMASBL-NLIST]
+		[-2,0]
+		[SPLAT]
+		[(2,41,,37,42)]
+		[T1]
 H10&rarr;		SMASBL,4,MM2-NLIST
 		#-NLIST-SMASBL,,MM2-NLIST+SPECB+1
 		-2,
@@ -1042,7 +1043,7 @@ H10&rarr;		SMASBL,4,MM2-NLIST
 		3,41,,37,42
 
 <hr>
-[meta file_name=102726903-05-02-acc.pdf pdf_page=25 doc_page=175 type=main]
+[meta file_name=102726903-05-02-acc.pdf pdf_page=25 doc_page=175 type=main proof=1]
 [Page header: "IES ONLW 023"]
 
 		0
@@ -1064,11 +1065,11 @@ Q1&rarr;		PICTUREK	**KIND
  LINES+NLIST-LIST|
 		**LINE MASTER
 L2&rarr;		MASTER&equiv;TOPOS&rarr;(24,35,,,30,33)
-		MASBL,4,,TOPOS-LIST
-		#-NLIST-MASBL,,#-NLIST+MASBL
-		-2,
-		SPLAT
-		(24,35,,30,33)
+		[MASBL,4,,TOPOS-LIST]
+		[#-NLIST-MASBL,,#-NLIST+MASBL]
+		[-2,]
+		[SPLAT]
+		[(24,35,,30,33)]
 		hJMP MAGL	**DISPLAY
 		hJMP CPIL	**HOWBIG
 		0	**GETIT
@@ -1094,7 +1095,7 @@ L3&rarr;		MASBL,4,,TOPOS-LIST
 Q3&rarr;		DISPLAYK
 
 <hr>
-[meta file_name=102726903-05-02-acc.pdf pdf_page=26 doc_page=176 type=main]
+[meta file_name=102726903-05-02-acc.pdf pdf_page=26 doc_page=176 type=main proof=1]
 [Page header: "IES ONLW 024"]
 
 		0	**TUPLE
@@ -1118,10 +1119,10 @@ Q7&rarr;		JUNKK
  POINTS+NLIST-LIST|
 		**POINT MASTER
 V2&rarr;		MASTER&equiv;VARIABLES&rarr;(42,43,,35,37)
-		MASBL,4,,VARIABLES-LIST
-		#-NLIST-MASBL,,#-NLIST+MASBL
-		-2,
-		(43,43,,35,37)
+		[MASBL,4,,VARIABLES-LIST]
+		[#-NLIST-MASBL,,#-NLIST+MASBL]
+		[-2,]
+		[(43,43,,35,37)]
 		hJMP MAGP	**DISPLAY
 		hJMP CPIP	**HOWBIG
 		0	**GETIT
@@ -1134,17 +1135,17 @@ Q4&rarr;		JUNKK
  TPVALS-LIST+NLIST|
 		**TYPICAL VARIABLE  &times;
 V3&rarr;		MASTER&equiv;VARIABLES&rarr;(41,45,,37,43)
-		MASBL,4,,VARIABLES-LIST
-		#-NLIST-MASBL,,#-NLIST+MASBL
-		-2,
-		SPLAT
-		(41,45,,37,43)
+		[MASBL,4,,VARIABLES-LIST]
+		[#-NLIST-MASBL,,#-NLIST+MASBL]
+		[-2,]
+		[SPLAT]
+		[(41,45,,37,43)]
 		hJMP MAGTPVAR	**DISPLAY
 		DEGEN		**HOWBIG
 		0	**GETIT
 
 <hr>
-[meta file_name=102726903-05-02-acc.pdf pdf_page=27 doc_page=177 type=main]
+[meta file_name=102726903-05-02-acc.pdf pdf_page=27 doc_page=177 type=main proof=1]
 [Page header: "IES ONLW 025"]
 
 		hJMP TRANSFORM 	**MOVIT
@@ -1156,11 +1157,11 @@ Q14&rarr;		JUNKK
  INSTANCES+NLIST-LIST|
 		**INSTANCE MASTER
 V4&rarr;		MASTER&equiv;VARIABLES&rarr;(43,42,,35,30)
-		MASBL,4,,VARIABLES-LIST
-		#-NLIST-MASBL,,#-NLIST+MASBL
-		-2,
-		SPLAT
-		(43,42,,35,30)
+		[MASBL,4,,VARIABLES-LIST]
+		[#-NLIST-MASBL,,#-NLIST+MASBL]
+		[-2,]
+		[SPLAT]
+		[(43,42,,35,30)]
 		hJMP MAGI	**DISPLAY
 		hJMP CPII	**HOWBIG
 		0	**GETIT
@@ -1173,18 +1174,18 @@ Q5&rarr;		DISPLAYK
  TEXTS+NLIST-LIST|
 		**TEXT MASTER
 V5&rarr;		MASTER&equiv;VARIABLES&rarr;(43,47,,24,43)
-		MASBL,4,,VARIABLES-LIST
-		#-NLIST-MASBL,,#-NLIST+MASBL
-		-2,
-		SPLAT
-		(43,47,,24,43)
+		[MASBL,4,,VARIABLES-LIST]
+		[#-NLIST-MASBL,,#-NLIST+MASBL]
+		[-2,]
+		[SPLAT]
+		[(43,47,,24,43)]
 		hJMP MAGTXT	**DISPLAY
 		hJMP CPITXT	**HOWBIG
 		0	**GETIT
 		hJMP TRANSFORM	**MOVIT
 		32,14,,0	**SIZE
 		hJMP WHERESUB	**WHERE
-Q?&rarr;		DISPLAYK
+Q8&rarr;		DISPLAYK [best guess for label: Q8, should not matter much as these labels do not appear to be referenced anywhere]
 		4	**TUPLE
 		TVAL	**VARLOC
  NUMBERS+NLIST-LIST|
@@ -1196,7 +1197,7 @@ V6&rarr;		MASBL,4,,VARIABLES-LIST
 		(21,34,,44,35)	**NUMB
 
 <hr>
-[meta file_name=102726903-05-02-acc.pdf pdf_page=28 doc_page=178 type=main]
+[meta file_name=102726903-05-02-acc.pdf pdf_page=28 doc_page=178 type=main proof=1]
 [Page header: "IES ONLW 026"]
 
 		hJMP MAGNUM	**DISPLAY
