--- a/sk2.html
+++ b/sk2.html
@@ -1407,7 +1407,7 @@ CPINUM&rarr;		<sup>1</sup>STE CPINUMX
 		SUMM&equiv;NVAL+LIST+1<sub>&alpha;</sub>&rarr; A&rarr;BADOV
 
 <hr>
-[meta file_name=102726903-05-02-acc.pdf pdf_page=36 doc_page=186 type=code]
+[meta file_name=102726903-05-02-acc.pdf pdf_page=36 doc_page=186 type=code proof=1]
 [Page header: "IES ONLW 010"]
 
 		SUMM&rarr;NVAL+LIST+1<sub>&alpha;</sub>=CPTU&rarr;BADOV
@@ -1418,7 +1418,7 @@ CPINUM&rarr;		<sup>1</sup>STE CPINUMX
 		hJPQ ROTATER
 		hJPQ CPNS
 		DIFF&equiv;NVAL+LIST+3<sub>&alpha;</sub>&rarr;CPTU= B&rarr;BADOV
-		DIFF&equiv;NVAL+LIST+2<sub>&alpha;</sub>&rarr;CPRV&rarr;BADOV
+		DIFF&equiv;NVAL+LIST+2<sub>&alpha;</sub>&rarr;CPTV&rarr;BADOV
 		hJPQ ROTATER
 		hJPQ CPNS
 CPINUMX&rarr;
@@ -1443,7 +1443,7 @@ CPNS&rarr;		<sup>1</sup>STE CPNSX
 		STA CPTT
 		SUB CPMAXX
 		SCA {-1,}
-		JNA #+1
+		JNA #+3
 		LDA CPTT
 		STA CPMAXX
 		LDA CPTT
@@ -1462,7 +1462,7 @@ CPNS&rarr;		<sup>1</sup>STE CPNSX
 		LDA CPTT
 
 <hr>
-[meta file_name=102726903-05-02-acc.pdf pdf_page=37 doc_page=187 type=code]
+[meta file_name=102726903-05-02-acc.pdf pdf_page=37 doc_page=187 type=code proof=1]
 [Page header: "IES ONLW 011"]
 
 		SUB CPMINY
@@ -1470,7 +1470,7 @@ CPNS&rarr;		<sup>1</sup>STE CPNSX
 		JPA #+3
 		LDA CPTT
 		STA CPMINY
-CPNSX&rarr;		JPQ	[no operand?]
+CPNSX&rarr;		JPQ	[syntax, no operand?]
 CPWRAPED&rarr;
 		RSX <sub>&beta;</sub> PICTURES+SPECB+1
 CPSX&rarr;		SXD <sub>&beta;</sub> PICTURES+SPECB+1-LIST
@@ -1517,7 +1517,7 @@ START76&rarr;
 		STAB&equiv;MATM
 
 <hr>
-[meta file_name=102726903-05-02-acc.pdf pdf_page=38 doc_page=188 type=code]
+[meta file_name=102726903-05-02-acc.pdf pdf_page=38 doc_page=188 type=code proof=1]
 [Page header: "IES ONLW 012"]
 
 		hJPQ PYTHAGORIAN
@@ -1572,7 +1572,7 @@ START76&rarr;
 		RSX <sub>S</sub><sub>|</sub><sub>&alpha;</sub> LIST+TYPE
 
 <hr>
-[meta file_name=102726903-05-02-acc.pdf pdf_page=39 doc_page=189 type=code]
+[meta file_name=102726903-05-02-acc.pdf pdf_page=39 doc_page=189 type=code proof=1]
 [Page header: "IES ONLW 013"]
 
 		SXD <sub>S</sub> INSTANCES-LIST
@@ -1609,7 +1609,7 @@ START76&rarr;
 		hSZZ MOVINGDONE
 		JPQ 76PUT1
 		STA NDISP
-		LDA {-(?)}	[is it possible it's actually lowercase h?]
+		LDA {-(h)}
 		STA MATM	**DIAGONAL MATRIX
 		STA MATD	**MATRIX DENOM
 		STA MATS	**PYTH OF MATM, MATO
@@ -1627,7 +1627,7 @@ START76&rarr;
 		JPQ 76PUT
 
 <hr>
-[meta file_name=102726903-05-02-acc.pdf pdf_page=40 doc_page=190 type=code]
+[meta file_name=102726903-05-02-acc.pdf pdf_page=40 doc_page=190 type=code proof=1]
 [Page header: "IES ONLW 014"]
 
 76PUNCH&rarr;
